# main_project

./: README.md
auto-distribution/: README.md
auto-distribution-Aleksander/: README.md  Данные_для_генерации_распределений_студентов_по_проектам_IT_Клиника__3_.xlsx
auto-distribution-alyona/: .gitignore  README.md  devenv.yaml  pyproject.toml
auto-distribution-alyona/src/: .gitignore  DistributionrandomSamples_23autumn.xlsx  baseline.ipynb  data_with_score_directions_roles.xlsx  student_directions.ipynb  students_role.ipynb  students_score.ipynb
auto-distribution-kseniia/: .gitignore  README.md  devenv.yaml  pyproject.toml
auto-distribution-kseniia/src/: roles_tech_analysis.ipynb  roles_tech_analysis — 4.ipynb  tech_vocab_sketch.ipynb
auto-distribution-polina/: .gitignore  README.md  devenv.yaml  pyproject.toml
auto-distribution/analytics/: test_tools.txt
auto-distribution/analytics/collecting_tech_dictionary/: CI_CD.txt  analysis_tools.txt  dev_tools.txt  frameworks.txt  languages.txt  project_management_tools.txt
auto-distribution/analytics/comparison_with_random/: DistributionrandomSamples_22autumn.xlsx  comparison_with_random.ipynb  distributed_projects_22autumn.xlsx  distributed_projects_23autumn.xlsx  random_distribution.ipynb  scorred_students_22autumn.xlsx  scorred_students_23autumn.xlsx
auto-distribution/analytics/improvement_suggestions/: improvement_suggestions.docx
auto-distribution/analytics/project_requests/: analysis_proj_requests.ipynb
auto-distribution/analytics/student_skills_clustering/: corr_matrix.xlsx  functions_for_clustering.py  roles_tech_analysis___4.ipynb  tech_analysis.ipynb
auto-distribution/baseline/: baseline.py  coding_and_double_cleaner.py  directions_role.py  main.py  new_student.XLSX  projects_raw_data.xlsx  raw_dataset_1.xlsx  score.py
auto-distribution/data engineering/: codding_raw_dataset.ipynb  create_raw_dataset.ipynb  dataset.xlsx  edit_raw_dataset.ipynb  raw_dataset_1.csv  table_coded.xlsx
