[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "auto-distribution-kseniia"
version = "0.1.0"
description = "Автоматизация компетентностного распределения специалистов по командам в проектах ИТ"
authors = ["airis05fior2020 <airis05fior2020@gmail.com>"]
packages = [
    { include = "src" },
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

click = "^8.1.7"
google-auth = "^2.22.0"
google-auth-stubs = "^0.2.0"
google-cloud-bigquery = "^3.11.4"
hydra-core = "^1.3.2"
joblib = "^1.3.2"
jupyter = "^1.0.0"
lakefs-client = "^0.107.0"
matplotlib = "^3.7.2"
more-itertools = "^10.1.0"
numpy = "^1.25.2"
omegaconf = "^2.3.0"
plotly = "^5.16.1"
polars = "^0.18.15"
pyarrow = "^12.0.1"
pydantic = "^2.2.1"
python-dotenv = "^1.0.0"
scikit-learn = "^1.3.0"
toolz = "^0.12.0"
tqdm = "^4.66.1"

[tool.poetry.dev-dependencies]
commitizen = "^2.42.1"
mypy= ">=1.1.1"
yastyleguide = "^0.2.0"

